--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "react-hook": "0.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "readable-stream": "^3.6.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
